Corrected alphabetic order in thanks files
The list of people to in `doc/announce-acknowledge.txt' and `THANKS' was
not alphabetically ordered in a few cases! This has been corrected.

--- a/THANKS
+++ b/THANKS
@@ -16,8 +16,8 @@ authors of Gnuastro. We hereby gratefully acknowledge their help and
 support in Gnuastro. The list is ordered alphabetically (by family name).
 
     Marjan Akbari                        mrjakbari@gmail.com
-    Karl Berry                           karl@gnu.org
     Roland Bacon                         roland.bacon@univ-lyon1.fr
+    Karl Berry                           karl@gnu.org
     Leindert Boogaard                    boogaard@strw.leidenuniv.nl
     Nicolas Bouché                       nicolas.bouche@irap.omp.eu
     Fernando Buitrago                    fbuitrago@oal.ul.pt
@@ -37,7 +37,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Alan Lefor                           alefor@astr.tohoku.ac.jp
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
     Francesco Montanari                  francesco.montanari@openmailbox.org
-    William Pence                        William.Pence@nasa.gov
+    William Pence                        william.pence@nasa.gov
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Alejandro Serrano Borlaff            asborlaff@ucm.es
     Lee Spitler                          lee.spitler@mq.edu.au
